--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "react-icons": "^3.10.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.2",
+    "react-scripts": "^3.4.3",
     "styled-components": "^5.1.1",
+    "tslint": "^6.1.3",
     "typescript": "~3.7.2"
   },
   "scripts": {
